manifests/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: binpak-backend
  namespace: binpak
spec:
  selector:
    app: binpak-backend
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
