manifests/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: binpak-ui
  namespace: binpak
spec:
  selector:
    app: binpak-ui
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
