manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: binpak
spec:
  selector:
    app: binpak
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
